--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   sqflite: ^2.3.3+1
   path_provider: 2.1.3
   shared_preferences: 2.2.3
+  permission_handler: ^10.4.5
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
